[gd_scene load_steps=44 format=3 uid="uid://b43qja41nvnnq"]

[ext_resource type="Script" path="res://assets/scripts/nucleo_02/actividad_02.gd" id="1_dwkx8"]
[ext_resource type="Texture2D" uid="uid://f2qijoqawmr3" path="res://img/nucleo_02/actividad_02/posicionar.png" id="1_is1t1"]
[ext_resource type="PackedScene" uid="uid://djtfeu0qegsme" path="res://scenes/actividades/clickeable.tscn" id="2_8nndn"]
[ext_resource type="PackedScene" uid="uid://bgs2ty3i0fjmf" path="res://scenes/elementos/boton_s.tscn" id="3_1wg1b"]
[ext_resource type="Texture2D" uid="uid://cxcg2n1r4k87t" path="res://img/nucleo_02/actividad_02/amarillo_normal.png" id="3_udvtd"]
[ext_resource type="Texture2D" uid="uid://b7w2bjjvpm2y8" path="res://img/nucleo_02/actividad_02/rojo_normal.png" id="4_vy5d8"]
[ext_resource type="Texture2D" uid="uid://dxnhnxqcwysru" path="res://img/nucleo_02/actividad_02/azul_normal.png" id="5_q5vw4"]
[ext_resource type="Texture2D" uid="uid://r23j2l2q7lpx" path="res://img/nucleo_02/actividad_02/verde_disabled.png" id="6_7sodf"]
[ext_resource type="Texture2D" uid="uid://cwc1sf85w7qgo" path="res://img/nucleo_02/actividad_02/verde_normal.png" id="7_xpjdf"]
[ext_resource type="Texture2D" uid="uid://c28gjondngyt1" path="res://img/nucleo_02/actividad_02/exportando_datos.png" id="8_yhblh"]
[ext_resource type="Texture2D" uid="uid://brjcqkg2251qc" path="res://img/nucleo_02/actividad_02/aplicaciones.png" id="11_ejgnt"]
[ext_resource type="Theme" uid="uid://bm1ub45g4i7os" path="res://themes/ai_theme.tres" id="11_o1ejt"]
[ext_resource type="Texture2D" uid="uid://c8yr4tywuqjqx" path="res://img/nucleo_02/actividad_02/face_normal.png" id="12_111pu"]
[ext_resource type="Texture2D" uid="uid://cuu2ugrh0pnj1" path="res://img/nucleo_02/actividad_02/netflix_normal.png" id="13_h8wxu"]
[ext_resource type="Texture2D" uid="uid://y7swc1yj3yiu" path="res://img/nucleo_02/actividad_02/candy_normal.png" id="14_y1cl0"]
[ext_resource type="Texture2D" uid="uid://cnamv1r681ats" path="res://img/nucleo_02/actividad_02/ps_normal.png" id="15_gute7"]
[ext_resource type="Texture2D" uid="uid://0ot77832fqll" path="res://img/nucleo_02/actividad_02/ps_seleccionado.png" id="16_0nvoo"]
[ext_resource type="Texture2D" uid="uid://bpixrvkjewg1c" path="res://img/nucleo_02/actividad_02/personalizaci√≥n.png" id="19_8k172"]
[ext_resource type="Texture2D" uid="uid://b0i4j6xkjlh7g" path="res://img/loading/loading_1.png" id="20_166y1"]
[ext_resource type="Texture2D" uid="uid://bijbof06qnk06" path="res://img/loading/loading_2.png" id="21_i2r8f"]
[ext_resource type="Texture2D" uid="uid://b0h4hnqvs7wk1" path="res://img/loading/loading_3.png" id="22_kqflp"]
[ext_resource type="Texture2D" uid="uid://4sfnk3jakq56" path="res://img/loading/loading_4.png" id="23_p4kxa"]
[ext_resource type="Texture2D" uid="uid://d12oayqbcn3d6" path="res://img/loading/loading_5.png" id="24_jmh6l"]
[ext_resource type="Texture2D" uid="uid://bpuimdk3yyawx" path="res://img/loading/loading_6.png" id="25_gbwtd"]
[ext_resource type="Texture2D" uid="uid://dfrwbnuh3crqu" path="res://img/loading/loading_7.png" id="26_76ebc"]
[ext_resource type="Texture2D" uid="uid://doq4s228lldvg" path="res://img/loading/loading_8.png" id="27_lky65"]
[ext_resource type="Texture2D" uid="uid://dpx2q3jcjg2b1" path="res://img/loading/loading_9.png" id="28_y0mqh"]
[ext_resource type="Texture2D" uid="uid://d0rqgyxrftg0k" path="res://img/loading/loading_10.png" id="29_jx6vh"]
[ext_resource type="Texture2D" uid="uid://h4cv0pv17mo4" path="res://img/loading/loading_11.png" id="30_hvyvc"]
[ext_resource type="Texture2D" uid="uid://c5i08tdbeo1a8" path="res://img/loading/loading_12.png" id="31_i74ia"]
[ext_resource type="Texture2D" uid="uid://dllf1hkbyvoik" path="res://img/loading/loading_13.png" id="32_wohhh"]
[ext_resource type="Texture2D" uid="uid://dn5bbvh76rjdn" path="res://img/loading/loading_14.png" id="33_ye0x0"]
[ext_resource type="Texture2D" uid="uid://ccfe7qrudfo2h" path="res://img/loading/loading_15.png" id="34_dtk2u"]
[ext_resource type="Texture2D" uid="uid://ba0uyr270yvtg" path="res://img/loading/loading_16.png" id="35_rx7sg"]
[ext_resource type="Texture2D" uid="uid://cv6iwcuu4ow0b" path="res://img/loading/loading_17.png" id="36_l15ul"]
[ext_resource type="Texture2D" uid="uid://dopckelulw8q2" path="res://img/loading/loading_18.png" id="37_w3a8y"]
[ext_resource type="Texture2D" uid="uid://cnby2bq71t0lk" path="res://img/loading/loading_19.png" id="38_ivc7e"]
[ext_resource type="Texture2D" uid="uid://dxlo80lju433i" path="res://img/loading/loading_20.png" id="39_0eg06"]
[ext_resource type="Texture2D" uid="uid://cf0sojjp8spwa" path="res://img/loading/loading_21.png" id="40_v8xng"]
[ext_resource type="Texture2D" uid="uid://bstjgmdpxk3ef" path="res://img/loading/loading_22.png" id="41_60rhk"]
[ext_resource type="Texture2D" uid="uid://bpg8gpoe0fi4n" path="res://img/loading/loading_23.png" id="42_6w4x1"]
[ext_resource type="PackedScene" uid="uid://c0pnxckwulqw5" path="res://scenes/actividades/presionar_anim.tscn" id="42_yo16s"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mf55w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_166y1")
}, {
"duration": 1.0,
"texture": ExtResource("21_i2r8f")
}, {
"duration": 1.0,
"texture": ExtResource("22_kqflp")
}, {
"duration": 1.0,
"texture": ExtResource("23_p4kxa")
}, {
"duration": 1.0,
"texture": ExtResource("24_jmh6l")
}, {
"duration": 1.0,
"texture": ExtResource("25_gbwtd")
}, {
"duration": 1.0,
"texture": ExtResource("26_76ebc")
}, {
"duration": 1.0,
"texture": ExtResource("27_lky65")
}, {
"duration": 1.0,
"texture": ExtResource("28_y0mqh")
}, {
"duration": 1.0,
"texture": ExtResource("29_jx6vh")
}, {
"duration": 1.0,
"texture": ExtResource("30_hvyvc")
}, {
"duration": 1.0,
"texture": ExtResource("31_i74ia")
}, {
"duration": 1.0,
"texture": ExtResource("32_wohhh")
}, {
"duration": 1.0,
"texture": ExtResource("33_ye0x0")
}, {
"duration": 1.0,
"texture": ExtResource("34_dtk2u")
}, {
"duration": 1.0,
"texture": ExtResource("35_rx7sg")
}, {
"duration": 1.0,
"texture": ExtResource("36_l15ul")
}, {
"duration": 1.0,
"texture": ExtResource("37_w3a8y")
}, {
"duration": 1.0,
"texture": ExtResource("38_ivc7e")
}, {
"duration": 1.0,
"texture": ExtResource("39_0eg06")
}, {
"duration": 1.0,
"texture": ExtResource("40_v8xng")
}, {
"duration": 1.0,
"texture": ExtResource("41_60rhk")
}, {
"duration": 1.0,
"texture": ExtResource("42_6w4x1")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="Actividad02" type="Node2D"]
script = ExtResource("1_dwkx8")

[node name="Posicionar" type="Sprite2D" parent="."]
visible = false
position = Vector2(946, 120)
texture = ExtResource("1_is1t1")

[node name="BotonS" parent="Posicionar" instance=ExtResource("3_1wg1b")]
offset_left = -63.0
offset_top = 117.0
offset_right = 65.0
offset_bottom = 162.0
color = Color(0.909804, 0, 0.490196, 1)
texto = "ENVIAR"

[node name="Colores" type="Node2D" parent="."]

[node name="Amarillo" parent="Colores" instance=ExtResource("2_8nndn")]
position = Vector2(560, 120)
imagen = ExtResource("3_udvtd")

[node name="RojoNormal" type="Sprite2D" parent="Colores"]
position = Vector2(817, 123)
texture = ExtResource("4_vy5d8")

[node name="AzulNormal" type="Sprite2D" parent="Colores"]
position = Vector2(1330, 125)
texture = ExtResource("5_q5vw4")

[node name="RojoNormal2" type="Sprite2D" parent="Colores"]
position = Vector2(1074, 123)
texture = ExtResource("4_vy5d8")

[node name="VerdeDisabled" type="Sprite2D" parent="Colores"]
position = Vector2(1074, 123)
texture = ExtResource("6_7sodf")

[node name="VerdeNormal" type="Sprite2D" parent="Colores"]
position = Vector2(1074, 123)
texture = ExtResource("7_xpjdf")

[node name="PosicionarAplicaciones" type="Sprite2D" parent="."]
visible = false
position = Vector2(946, 123)
texture = ExtResource("11_ejgnt")

[node name="BotonS" parent="PosicionarAplicaciones" instance=ExtResource("3_1wg1b")]
offset_left = -63.0
offset_top = 114.0
offset_right = 65.0
offset_bottom = 159.0
color = Color(0.909804, 0, 0.490196, 1)
texto = "ENVIAR"

[node name="Aplicaciones" type="Node2D" parent="."]
visible = false

[node name="FaceNormal" type="Sprite2D" parent="Aplicaciones"]
position = Vector2(816, 122)
texture = ExtResource("12_111pu")

[node name="NetflixNormal" type="Sprite2D" parent="Aplicaciones"]
position = Vector2(560, 122)
texture = ExtResource("13_h8wxu")

[node name="CandyNormal" type="Sprite2D" parent="Aplicaciones"]
position = Vector2(1332, 123)
texture = ExtResource("14_y1cl0")

[node name="Ps" type="TextureButton" parent="Aplicaciones"]
offset_left = 1010.0
offset_top = 60.0
offset_right = 1139.0
offset_bottom = 186.0
texture_normal = ExtResource("15_gute7")
texture_hover = ExtResource("16_0nvoo")

[node name="ExportandoDatos" type="Sprite2D" parent="."]
position = Vector2(953, 618)
texture = ExtResource("8_yhblh")

[node name="ProgressBar" type="ProgressBar" parent="ExportandoDatos"]
offset_left = -151.0
offset_top = 2.0
offset_right = 171.0
offset_bottom = 45.0
theme = ExtResource("11_o1ejt")
show_percentage = false

[node name="Loading" type="AnimatedSprite2D" parent="ExportandoDatos"]
modulate = Color(0.615686, 0.0313726, 0.909804, 1)
position = Vector2(11.0001, 173)
scale = Vector2(0.587572, 0.574686)
sprite_frames = SubResource("SpriteFrames_mf55w")

[node name="Personalizacion" type="Sprite2D" parent="."]
visible = false
position = Vector2(1031, 548)
texture = ExtResource("19_8k172")

[node name="Timer" type="Timer" parent="Personalizacion"]
wait_time = 2.0
one_shot = true

[node name="BotonS" parent="Personalizacion" instance=ExtResource("3_1wg1b")]
offset_left = -412.0
offset_top = 176.0
offset_right = -284.0
offset_bottom = 221.0
scale = Vector2(1.43319, 1.62979)
color = Color(0.909804, 0, 0.490196, 1)
texto = "ENVIAR"

[node name="Presionar" parent="." instance=ExtResource("42_yo16s")]
modulate = Color(0.909804, 0, 0.490196, 1)

[connection signal="pressed" from="Posicionar/BotonS" to="." method="_on_boton_colores"]
[connection signal="clickeado" from="Colores/Amarillo" to="." method="_on_amarillo_clickeado"]
[connection signal="pressed" from="PosicionarAplicaciones/BotonS" to="." method="_on_boton_aplicaciones"]
[connection signal="pressed" from="Aplicaciones/Ps" to="." method="_on_ps_pressed"]
[connection signal="timeout" from="Personalizacion/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Personalizacion/BotonS" to="." method="_on_boton_personalizacion"]
